*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1861,7 +1861,7 @@ nedtool -n wireless.xml
 
 The result is \ttt{wireless\_n.ned}.
 
-Using nedtool as nedc to generate C++ code:
+Using nedtool as NED compiler to generate C++ code:
 
 \begin{verbatim}
 nedtool wireless.ned
